--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Precision is our craftsmanship">
+    <meta name="keywords" content="yugan Industries, laser cutting, heat cutting, Industries">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <title>Yugan Industries</title>
     <link href="%PUBLIC_URL%/styles.css" rel="stylesheet" />
